# LifeOS

./: .devenv.flake.nix  .example.env  .gitignore  PLAN.md  README.md  devenv.nix  devenv.yaml  local.properties  main.py  pyproject.toml  transcribe_batch.py  wants.md
experiments/: rename_with_iso_prefix.py  summarize.py  transcribe_batch.py
experiments-python/search-experiments/summary-level/full-blob/: search.py
experiments-python/search-experiments/summary-level/structured-fields/: index.py
experiments-python/search-experiments/summary-level/structured-fields-grouped/: index.py
experiments-python/search-experiments/transcript-level/semantic-chunks/: index.py  search_grouped.py
experiments-python/search-final/: .gitignore  README.md  shared.py
experiments-python/search-final/layer-1-summary/: index.py  search.py
experiments-python/search-final/layer-1-summary-hybrid/: index.py
experiments-python/search-final/layer-2-transcript-hybrid/: index.py  search.py
experiments/litellm/: .env.example  .gitignore  config.yaml  docker-compose.yml  test_proxy.py
experiments/search/: .gitignore  evaluation_report.py  shared.py
experiments/search-experiments/: eval_analyze.py  eval_run.py  shared.py
experiments/search-experiments/transcript-level/enriched-semantic-chunks/: search_grouped.py
experiments/search-final/: README.md  shared.py
experiments/search-final/layer-1-summary-hybrid/: search.py
experiments/search-final/layer-2-transcript/: index.py  search.py
experiments/search/summary-level/full-blob/: index.py  (+1 more)
lifeos/: app.json  package.json
(+7 files in other folders)
