[project]
name = "lifeos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[model2vec,semantic]>=1.6.0",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "litellm>=1.82.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
